--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,7 @@
   box-sizing: border-box;
 }
 
-.field-wrapper{
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.field{
-  border: 1px solid black;
-  border-radius: 4px;
-  padding: 1.5rem;
+body{
+  font-size: 118.2%;
+  font-family: 'Montserrat', sans-serif;
 }
