added search feature

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,9 @@ body{
   font-size: 118.2%;
   font-family: 'Montserrat', sans-serif;
 }
+
+@media screen and (min-width: 800px){
+  body{
+    font-size: 135%;
+  }
+}
